# shopping-list-application

./: LICENSE  README.md
shopping_list_api/: pyproject.toml
shopping_list_api/src/items/: admin.py  models.py  serializers.py  views.py
shopping_list_api/src/items/migrations/: 0001_initial.py
shopping_list_api/src/shopping_list/: settings.py
shopping_list_webui/: package-lock.json  package.json
